tests/baselines/reference/-incompasig-121.errors.txt
-incompasig-121.ts(7,16): error TS2349: This expression is not callable.
  Each member of the union type 'Test121<number> | Test121<bigint>' has signatures, but none of those signatures are compatible with each other.
-incompasig-121.ts(7,29): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== -incompasig-121.ts (2 errors) ====
    interface Test121<T> {
        (cb:(a:T, x:T)=>T):T[];
        <U>(cb:(a:U, x:T)=>U,init:U):U[];
    }
    
    declare const f: Test121<number> | Test121<bigint>;
    const result = f((a:bigint, x) => a * BigInt(x), 1n);
                   ~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Each member of the union type 'Test121<number> | Test121<bigint>' has signatures, but none of those signatures are compatible with each other.
                                ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    
    
    